In ViewItinerary, stopped rate buttons from jumping around. Also added unrate feature to rate buttons

--- a/src/pages/ViewItinerary/ViewItinerary.module.css
+++ b/src/pages/ViewItinerary/ViewItinerary.module.css
@@ -88,7 +88,8 @@
 }
 
 .ratingButtonGroup {
-	margin-left: 10px;
+	margin-left: 150px;
+	position: absolute;
 }
 
 .eventsContainer {
